# smaLLMs

./: .gitattributes  .gitignore  LICENSE  README.md  beautiful_terminal.py  check_local_services.py  intelligent_evaluator.py  portui.cmd  portui.ps1  portui.sh  pyproject.toml  requirements-dev.txt  requirements-local.txt  requirements.txt  run_local_benchmarks.py  simple_exporter.py  smaLLMs.py  start.bat  start.py  start.sh  test_enhanced_statistics.py  test_everything.py
.github/workflows/: ci.yml
.portui-runtime/: portui.cmd  portui.ps1  portui.sh
config/: comprehensive_benchmark.yaml  config.example.yaml  config.yaml  models.yaml
docs/: METHODOLOGY.md  agent-harness-findings.md  reasoning-effort-findings.md
docs/run_cards/: README.md
legacy/: README.md
legacy/old_stack/: beautiful_terminal.py
portui/: manifest.env
portui/actions/: 01-launch-menu.env  02-setup-check.env  03-doctor.env  04-discover-models.env  05-list-benchmarks.env  06-quick-suite.env  07-export-latest.env  08-sync-webs.env  09-test.env  10-cache-quick-suite.env  11-offline-quick-suite.env
results/: cloud_upload.jsonl
src/: __init__.py  evaluator.py
src/benchmarks/: __init__.py  benchmark_registry.py
src/cli/: __init__.py  setup_checks.py  terminal_menu.py
src/metrics/: __init__.py  result_aggregator.py
src/models/: model_manager.py
src/utils/: env.py  (+2 more)
tests/: test_agent_harness.py  test_benchmark_cache.py  test_benchmark_catalog.py  test_benchmark_metrics.py  test_cli_parser.py  test_env.py  test_launcher.py  test_live_terminal.py  test_model_manager.py  test_orchestrator_reproducibility.py  test_pipeline_config.py  test_portui_manifest.py  test_reasoning_sweep.py  test_setup_checks.py  test_terminal_menu.py  test_website_exporter.py
(+13 files in other folders)
