[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smallms"
version = "0.1.0"
description = "CLI-first local LLM benchmarking for Ollama and LM Studio."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "mmdmcy" }
]
keywords = [
  "llm",
  "benchmark",
  "evaluation",
  "ollama",
  "lm-studio",
  "local-first"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pyyaml>=6.0.1",
  "aiohttp>=3.9.0",
  "datasets>=4.8.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
  "huggingface_hub>=0.20.0",
  "transformers>=4.36.0",
  "evaluate>=0.4.1",
  "torch>=2.1.0",
  "pandas>=2.1.0",
  "numpy>=1.24.0",
  "requests>=2.31.0",
  "tqdm>=4.66.0",
  "asyncio-throttle>=1.0.2",
  "psutil>=5.9.0",
  "scikit-learn>=1.3.0",
  "scipy>=1.11.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
]

[project.scripts]
smallms = "smaLLMs:main"
smallms-run = "run_local_benchmarks:main"

[project.urls]
Homepage = "https://github.com/mmdmcy/smaLLMs"
Repository = "https://github.com/mmdmcy/smaLLMs"
Issues = "https://github.com/mmdmcy/smaLLMs/issues"

[tool.setuptools]
py-modules = ["smaLLMs", "run_local_benchmarks", "start"]

[tool.setuptools.packages.find]
include = ["src*"]
